namespace Nemeio.Core.Keyboard.Communication
{
    public enum CommunicationType
    {
        Serial,
        BluetoothLE
    }
}
